<resources>
    <string name="app_name">tutu_intern_test_cherniak</string>
    <string name="pokemon_avatar">pokemonAvatar</string>
    <string name="weight_icon">weight_icon</string>
    <string name="height_icon">height_icon</string>
    <string name="pokemon">Покемон %1$s</string>
    <string name="weight">Вес</string>
    <string name="pokemons_list">Список покемонов</string>
    <string name="no_data">Данные отсутствуют</string>
    <string name="no_network">Нет сети. Проверьте подключение</string>
    <string name="default_details_parameters">0</string>
    <string name="expandable_image_view">Кнопка - Открыть список</string>
    <string name="refresh">Обновить</string>
    <string name="error_list_message">Произошла ошибка</string>
    <string name="error_project_message">Error: %1$s</string>
    <string name="no_data_message">Данные отсутствуют.\n Потяните вниз, чтобы обновить.</string>
</resources>