<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.details.PokemonDetailsFragment">

    <Toolbar
        android:id="@+id/detailsFragmentToolbar"
        style="@style/PokemonToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/pokemon" />

    <View
        style="@style/ToolbarDividerTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_divider_1" />

    <TextView
        android:id="@+id/detailsNoNetworkTextView"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        android:gravity="center"
        android:text="@string/no_network"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detailsNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/pokemonAvatarImageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/details_avatar_size_200"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:contentDescription="@string/pokemon_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/pokemonNameTextView"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonAvatarImageView"
                tools:text="@tools:sample/first_names" />

            <ImageView
                android:id="@+id/weightIconImageView"
                android:layout_width="@dimen/weight_and_height_icons_50"
                android:layout_height="@dimen/weight_and_height_icons_50"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:contentDescription="@string/weight_icon"
                android:src="@drawable/ic_weight_kilogram_white_48dp"
                app:layout_constraintEnd_toStartOf="@id/iconDividerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonNameTextView" />

            <View
                android:id="@+id/iconDividerView"
                android:layout_width="3dp"
                android:layout_height="@dimen/weight_and_height_icons_50"
                android:background="@color/divider_grey_color"
                app:layout_constraintEnd_toStartOf="@id/heightIconImageView"
                app:layout_constraintStart_toEndOf="@id/weightIconImageView"
                app:layout_constraintTop_toTopOf="@id/weightIconImageView" />

            <ImageView
                android:id="@+id/heightIconImageView"
                android:layout_width="@dimen/weight_and_height_icons_50"
                android:layout_height="@dimen/weight_and_height_icons_50"
                android:contentDescription="@string/height_icon"
                android:src="@drawable/ic_human_male_height_variant_white_48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iconDividerView"
                app:layout_constraintTop_toTopOf="@id/weightIconImageView" />

            <TextView
                android:id="@+id/weightTextView"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:text="@string/default_details_parameters"
                app:layout_constraintEnd_toEndOf="@id/weightIconImageView"
                app:layout_constraintStart_toStartOf="@id/weightIconImageView"
                app:layout_constraintTop_toBottomOf="@id/weightIconImageView" />

            <TextView
                android:id="@+id/heightTextView"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:text="@string/default_details_parameters"
                app:layout_constraintEnd_toEndOf="@id/heightIconImageView"
                app:layout_constraintStart_toStartOf="@id/heightIconImageView"
                app:layout_constraintTop_toBottomOf="@id/heightIconImageView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal_16"
                android:layout_marginTop="@dimen/spacing_huge_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heightTextView" />

            <TextView
                android:id="@+id/detailsNoDataTextView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_data"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/detailsRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/detailsRecyclerView" />

            <ProgressBar
                android:id="@+id/detailsProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:indeterminateTint="@color/grey_224"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>